external-crates/move/crates/move-compiler/tests/move_check/naming/unbound_constant.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E03005]: unbound unscoped name
  ┌─ tests/move_check/naming/unbound_constant.move:4:17
  │
4 │         let x = CONSTANT; x;
  │                 ^^^^^^^^ Unbound constant 'CONSTANT'

error[E03003]: unbound module member
  ┌─ tests/move_check/naming/unbound_constant.move:5:17
  │
5 │         let y = Self::CONSTANT; y;
  │                 ^^^^^^^^^^^^^^ Unbound module member 'CONSTANT' in current scope

error[E03005]: unbound unscoped name
  ┌─ tests/move_check/naming/unbound_constant.move:6:13
  │
6 │         0 + CONSTANT + Self::CONSTANT;
  │             ^^^^^^^^ Unbound constant 'CONSTANT'

error[E03003]: unbound module member
  ┌─ tests/move_check/naming/unbound_constant.move:6:24
  │
6 │         0 + CONSTANT + Self::CONSTANT;
  │                        ^^^^^^^^^^^^^^ Unbound module member 'CONSTANT' in current scope
